# samp-ethereum-plugin

./: .gitignore  CMakeLists.txt  README.md  appveyor.yml  bintray.json  ethereum-payments.inc  go.mod  makefile  pawn.json  test.pwn
gosrc/: ethereum-payments-plugin.h  go.mod  go.sum  main.go  main_test.go
src/: CMakeLists.txt  impl.hpp  natives.cpp  natives.hpp
test/: samp.json
